# aoc2023

./: .gitignore  .ocamlformat  .ocamlinit  README.md  aoc2023.opam  dune-project
lib/: day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  day_09.ml  day_10.ml  day_11.ml  day_12.ml  day_13.ml  day_14.ml  day_15.ml  day_16.ml  dune
