(lang dune 3.11)

(name aoc2023)

(generate_opam_files true)

(source
 (github PieterJanVdb/aoc2023))

(authors "Pieter-Jan Vandenbussche")

(maintainers "Pieter-Jan Vandenbussche")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2023)
 (synopsis "Advent of Code 2023")
 (description "OCaml attempt at working through Advent of Code 2023")
 (depends ocaml dune))
